// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense summary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $2.34
  </h1>
</div>
`;

exports[`should render expense summary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    12
     
    expenses
     totaling 
    $12.34
  </h1>
</div>
`;

exports[`should render expense summary with no expenses 1`] = `
<div>
  <h1>
    No expenses meeting filter criteria
  </h1>
</div>
`;
